parser.output
Nonterminals useless in grammar

    ifade_listesi


Rules useless in grammar

   69 ifade_listesi: ifade
   70              | ifade_listesi ',' ifade


State 4 conflicts: 1 shift/reduce
State 33 conflicts: 29 reduce/reduce
State 36 conflicts: 1 shift/reduce
State 59 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: ifadeler

    2 ifadeler: ifade
    3         | ifadeler ifade

    4 ifade: deyim
    5      | aritmetik_ifade
    6      | mantiksal_ifade

    7 blok: ifade
    8     | '{' ifadeler '}'

    9 deyim: atama_deyimi
   10      | dongu_deyimi
   11      | kosul_deyimi
   12      | fonksiyon_tanimi
   13      | dondur_deyimi
   14      | komut
   15      | fonksiyon_cagrisi

   16 atama_deyimi: TANIMLAYICI "←" ifade
   17             | TANIMLAYICI "+←" ifade
   18             | TANIMLAYICI "-←" ifade

   19 dongu_deyimi: IKEN '(' mantiksal_ifade ')' blok SON

   20 kosul_deyimi: EGER '(' mantiksal_ifade ')' blok SON
   21             | EGER '(' mantiksal_ifade ')' blok DEGILSE blok SON

   22 parametre_listesi: ε
   23                  | TANIMLAYICI
   24                  | parametre_listesi ',' TANIMLAYICI

   25 fonksiyon_tanimi: FONKSIYON TANIMLAYICI '(' parametre_listesi ')' blok SON

   26 dondur_deyimi: DONDUR ifade

   27 arguman_listesi: ε
   28                | ifade
   29                | arguman_listesi ',' ifade

   30 fonksiyon_cagrisi: TANIMLAYICI '(' arguman_listesi ')'

   31 komut: EKRANA_YAZ '(' arguman_listesi ')'
   32      | DEGER_GOSTER '(' arguman_listesi ')'
   33      | EKRANI_TEMIZLE '(' arguman_listesi ')'
   34      | RENK_AYARLA '(' arguman_listesi ')'
   35      | KALINLIK_AYARLA '(' arguman_listesi ')'
   36      | DIKDORTGEN_CIZ '(' arguman_listesi ')'
   37      | DAIRE_CIZ '(' arguman_listesi ')'
   38      | UCGEN_CIZ '(' arguman_listesi ')'
   39      | DOLDUR '(' arguman_listesi ')'
   40      | GUNCELLE '(' arguman_listesi ')'

   41 mantiksal_ifade: aritmetik_ifade "==" aritmetik_ifade
   42                | aritmetik_ifade "!=" aritmetik_ifade
   43                | aritmetik_ifade "<" aritmetik_ifade
   44                | aritmetik_ifade ">" aritmetik_ifade
   45                | aritmetik_ifade "<=" aritmetik_ifade
   46                | aritmetik_ifade ">=" aritmetik_ifade
   47                | mantiksal_ifade "ve" mantiksal_ifade
   48                | mantiksal_ifade "veya" mantiksal_ifade
   49                | "değil" mantiksal_ifade
   50                | '(' mantiksal_ifade ')'
   51                | DOGRU
   52                | YANLIS

   53 aritmetik_ifade: terim
   54                | aritmetik_ifade '+' terim
   55                | aritmetik_ifade '-' terim

   56 terim: faktor
   57      | terim '*' faktor
   58      | terim '/' faktor
   59      | terim '%' faktor

   60 faktor: unary_ifade
   61       | '(' aritmetik_ifade ')'
   62       | fonksiyon_cagrisi

   63 unary_ifade: literal
   64            | TANIMLAYICI
   65            | '-' unary_ifade

   66 literal: TAMSAYI
   67        | ONDALIK
   68        | METIN


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 59
    '(' (40) 19 20 21 25 30 31 32 33 34 35 36 37 38 39 40 50 61
    ')' (41) 19 20 21 25 30 31 32 33 34 35 36 37 38 39 40 50 61
    '*' (42) 57
    '+' (43) 54
    ',' (44) 24 29
    '-' (45) 55 65
    '/' (47) 58
    '{' (123) 8
    '}' (125) 8
    error (256)
    TAMSAYI <int_value> (258) 66
    ONDALIK <double_value> (259) 67
    METIN <string_value> (260) 68
    TANIMLAYICI <identifier> (261) 16 17 18 23 24 25 30 64
    EGER (262) 20 21
    DEGILSE (263) 21
    IKEN (264) 19
    SON (265) 19 20 21 25
    DOGRU (266) 51
    YANLIS (267) 52
    FONKSIYON (268) 25
    DONDUR (269) 26
    EKRANA_YAZ (270) 31
    DEGER_GOSTER (271) 32
    EKRANI_TEMIZLE (272) 33
    RENK_AYARLA (273) 34
    KALINLIK_AYARLA (274) 35
    DIKDORTGEN_CIZ (275) 36
    DAIRE_CIZ (276) 37
    UCGEN_CIZ (277) 38
    DOLDUR (278) 39
    GUNCELLE (279) 40
    "←" (280) 16
    "+←" (281) 17
    "-←" (282) 18
    "ve" (283) 47
    "veya" (284) 48
    "değil" (285) 49
    "==" (286) 41
    "!=" (287) 42
    "<" (288) 43
    ">" (289) 44
    "<=" (290) 45
    ">=" (291) 46
    UMINUS (292)


Nonterminals, with rules where they appear

    $accept (48)
        on left: 0
    program <ast_node> (49)
        on left: 1
        on right: 0
    ifadeler <ast_node> (50)
        on left: 2 3
        on right: 1 3 8
    ifade <ast_node> (51)
        on left: 4 5 6
        on right: 2 3 7 16 17 18 26 28 29
    blok <ast_node> (52)
        on left: 7 8
        on right: 19 20 21 25
    deyim <ast_node> (53)
        on left: 9 10 11 12 13 14 15
        on right: 4
    atama_deyimi <ast_node> (54)
        on left: 16 17 18
        on right: 9
    dongu_deyimi <ast_node> (55)
        on left: 19
        on right: 10
    kosul_deyimi <ast_node> (56)
        on left: 20 21
        on right: 11
    parametre_listesi <param_list> (57)
        on left: 22 23 24
        on right: 24 25
    fonksiyon_tanimi <ast_node> (58)
        on left: 25
        on right: 12
    dondur_deyimi <ast_node> (59)
        on left: 26
        on right: 13
    arguman_listesi <arg_list> (60)
        on left: 27 28 29
        on right: 29 30 31 32 33 34 35 36 37 38 39 40
    fonksiyon_cagrisi <ast_node> (61)
        on left: 30
        on right: 15 62
    komut <ast_node> (62)
        on left: 31 32 33 34 35 36 37 38 39 40
        on right: 14
    mantiksal_ifade <ast_node> (63)
        on left: 41 42 43 44 45 46 47 48 49 50 51 52
        on right: 6 19 20 21 47 48 49 50
    aritmetik_ifade <ast_node> (64)
        on left: 53 54 55
        on right: 5 41 42 43 44 45 46 54 55 61
    terim <ast_node> (65)
        on left: 56 57 58 59
        on right: 53 54 55 57 58 59
    faktor <ast_node> (66)
        on left: 60 61 62
        on right: 56 57 58 59
    unary_ifade <ast_node> (67)
        on left: 63 64 65
        on right: 60 65
    literal <ast_node> (68)
        on left: 66 67 68
        on right: 63


State 0

    0 $accept: • program $end

    TAMSAYI          shift, and go to state 1
    ONDALIK          shift, and go to state 2
    METIN            shift, and go to state 3
    TANIMLAYICI      shift, and go to state 4
    EGER             shift, and go to state 5
    IKEN             shift, and go to state 6
    DOGRU            shift, and go to state 7
    YANLIS           shift, and go to state 8
    FONKSIYON        shift, and go to state 9
    DONDUR           shift, and go to state 10
    EKRANA_YAZ       shift, and go to state 11
    DEGER_GOSTER     shift, and go to state 12
    EKRANI_TEMIZLE   shift, and go to state 13
    RENK_AYARLA      shift, and go to state 14
    KALINLIK_AYARLA  shift, and go to state 15
    DIKDORTGEN_CIZ   shift, and go to state 16
    DAIRE_CIZ        shift, and go to state 17
    UCGEN_CIZ        shift, and go to state 18
    DOLDUR           shift, and go to state 19
    GUNCELLE         shift, and go to state 20
    "değil"          shift, and go to state 21
    '-'              shift, and go to state 22
    '('              shift, and go to state 23

    program            go to state 24
    ifadeler           go to state 25
    ifade              go to state 26
    deyim              go to state 27
    atama_deyimi       go to state 28
    dongu_deyimi       go to state 29
    kosul_deyimi       go to state 30
    fonksiyon_tanimi   go to state 31
    dondur_deyimi      go to state 32
    fonksiyon_cagrisi  go to state 33
    komut              go to state 34
    mantiksal_ifade    go to state 35
    aritmetik_ifade    go to state 36
    terim              go to state 37
    faktor             go to state 38
    unary_ifade        go to state 39
    literal            go to state 40


State 1

   66 literal: TAMSAYI •

    $default  reduce using rule 66 (literal)


State 2

   67 literal: ONDALIK •

    $default  reduce using rule 67 (literal)


State 3

   68 literal: METIN •

    $default  reduce using rule 68 (literal)


State 4

   16 atama_deyimi: TANIMLAYICI • "←" ifade
   17             | TANIMLAYICI • "+←" ifade
   18             | TANIMLAYICI • "-←" ifade
   30 fonksiyon_cagrisi: TANIMLAYICI • '(' arguman_listesi ')'
   64 unary_ifade: TANIMLAYICI •

    "←"   shift, and go to state 41
    "+←"  shift, and go to state 42
    "-←"  shift, and go to state 43
    '('   shift, and go to state 44

    '('       [reduce using rule 64 (unary_ifade)]
    $default  reduce using rule 64 (unary_ifade)

    shift/reduce conflict on token '(':
       64 unary_ifade: TANIMLAYICI •
       30 fonksiyon_cagrisi: TANIMLAYICI • '(' arguman_listesi ')'
      Example: TANIMLAYICI • '(' mantiksal_ifade ')'
      Shift derivation
        ifadeler
        ↳ 2: ifade
             ↳ 4: deyim
                  ↳ 15: fonksiyon_cagrisi
                        ↳ 30: TANIMLAYICI • arguman_listesi                ')'
                                            ↳ 28: ifade
                                                  ↳ 6: '(' mantiksal_ifade
      Reduce derivation
        ifadeler
        ↳ 3: ifadeler                                        ifade
             ↳ 2: ifade                                      ↳ 6: mantiksal_ifade
                  ↳ 5: aritmetik_ifade                            ↳ 50: '(' mantiksal_ifade ')'
                       ↳ 53: terim
                             ↳ 56: faktor
                                   ↳ 60: unary_ifade
                                         ↳ 64: TANIMLAYICI •



State 5

   20 kosul_deyimi: EGER • '(' mantiksal_ifade ')' blok SON
   21             | EGER • '(' mantiksal_ifade ')' blok DEGILSE blok SON

    '('  shift, and go to state 45


State 6

   19 dongu_deyimi: IKEN • '(' mantiksal_ifade ')' blok SON

    '('  shift, and go to state 46


State 7

   51 mantiksal_ifade: DOGRU •

    $default  reduce using rule 51 (mantiksal_ifade)


State 8

   52 mantiksal_ifade: YANLIS •

    $default  reduce using rule 52 (mantiksal_ifade)


State 9

   25 fonksiyon_tanimi: FONKSIYON • TANIMLAYICI '(' parametre_listesi ')' blok SON

    TANIMLAYICI  shift, and go to state 47


State 10

   26 dondur_deyimi: DONDUR • ifade

    TAMSAYI          shift, and go to state 1
    ONDALIK          shift, and go to state 2
    METIN            shift, and go to state 3
    TANIMLAYICI      shift, and go to state 4
    EGER             shift, and go to state 5
    IKEN             shift, and go to state 6
    DOGRU            shift, and go to state 7
    YANLIS           shift, and go to state 8
    FONKSIYON        shift, and go to state 9
    DONDUR           shift, and go to state 10
    EKRANA_YAZ       shift, and go to state 11
    DEGER_GOSTER     shift, and go to state 12
    EKRANI_TEMIZLE   shift, and go to state 13
    RENK_AYARLA      shift, and go to state 14
    KALINLIK_AYARLA  shift, and go to state 15
    DIKDORTGEN_CIZ   shift, and go to state 16
    DAIRE_CIZ        shift, and go to state 17
    UCGEN_CIZ        shift, and go to state 18
    DOLDUR           shift, and go to state 19
    GUNCELLE         shift, and go to state 20
    "değil"          shift, and go to state 21
    '-'              shift, and go to state 22
    '('              shift, and go to state 23

    ifade              go to state 48
    deyim              go to state 27
    atama_deyimi       go to state 28
    dongu_deyimi       go to state 29
    kosul_deyimi       go to state 30
    fonksiyon_tanimi   go to state 31
    dondur_deyimi      go to state 32
    fonksiyon_cagrisi  go to state 33
    komut              go to state 34
    mantiksal_ifade    go to state 35
    aritmetik_ifade    go to state 36
    terim              go to state 37
    faktor             go to state 38
    unary_ifade        go to state 39
    literal            go to state 40


State 11

   31 komut: EKRANA_YAZ • '(' arguman_listesi ')'

    '('  shift, and go to state 49


State 12

   32 komut: DEGER_GOSTER • '(' arguman_listesi ')'

    '('  shift, and go to state 50


State 13

   33 komut: EKRANI_TEMIZLE • '(' arguman_listesi ')'

    '('  shift, and go to state 51


State 14

   34 komut: RENK_AYARLA • '(' arguman_listesi ')'

    '('  shift, and go to state 52


State 15

   35 komut: KALINLIK_AYARLA • '(' arguman_listesi ')'

    '('  shift, and go to state 53


State 16

   36 komut: DIKDORTGEN_CIZ • '(' arguman_listesi ')'

    '('  shift, and go to state 54


State 17

   37 komut: DAIRE_CIZ • '(' arguman_listesi ')'

    '('  shift, and go to state 55


State 18

   38 komut: UCGEN_CIZ • '(' arguman_listesi ')'

    '('  shift, and go to state 56


State 19

   39 komut: DOLDUR • '(' arguman_listesi ')'

    '('  shift, and go to state 57


State 20

   40 komut: GUNCELLE • '(' arguman_listesi ')'

    '('  shift, and go to state 58


State 21

   49 mantiksal_ifade: "değil" • mantiksal_ifade

    TAMSAYI      shift, and go to state 1
    ONDALIK      shift, and go to state 2
    METIN        shift, and go to state 3
    TANIMLAYICI  shift, and go to state 59
    DOGRU        shift, and go to state 7
    YANLIS       shift, and go to state 8
    "değil"      shift, and go to state 21
    '-'          shift, and go to state 22
    '('          shift, and go to state 23

    fonksiyon_cagrisi  go to state 60
    mantiksal_ifade    go to state 61
    aritmetik_ifade    go to state 62
    terim              go to state 37
    faktor             go to state 38
    unary_ifade        go to state 39
    literal            go to state 40


State 22

   65 unary_ifade: '-' • unary_ifade

    TAMSAYI      shift, and go to state 1
    ONDALIK      shift, and go to state 2
    METIN        shift, and go to state 3
    TANIMLAYICI  shift, and go to state 63
    '-'          shift, and go to state 22

    unary_ifade  go to state 64
    literal      go to state 40


State 23

   50 mantiksal_ifade: '(' • mantiksal_ifade ')'
   61 faktor: '(' • aritmetik_ifade ')'

    TAMSAYI      shift, and go to state 1
    ONDALIK      shift, and go to state 2
    METIN        shift, and go to state 3
    TANIMLAYICI  shift, and go to state 59
    DOGRU        shift, and go to state 7
    YANLIS       shift, and go to state 8
    "değil"      shift, and go to state 21
    '-'          shift, and go to state 22
    '('          shift, and go to state 23

    fonksiyon_cagrisi  go to state 60
    mantiksal_ifade    go to state 65
    aritmetik_ifade    go to state 66
    terim              go to state 37
    faktor             go to state 38
    unary_ifade        go to state 39
    literal            go to state 40


State 24

    0 $accept: program • $end

    $end  shift, and go to state 67


State 25

    1 program: ifadeler •
    3 ifadeler: ifadeler • ifade

    TAMSAYI          shift, and go to state 1
    ONDALIK          shift, and go to state 2
    METIN            shift, and go to state 3
    TANIMLAYICI      shift, and go to state 4
    EGER             shift, and go to state 5
    IKEN             shift, and go to state 6
    DOGRU            shift, and go to state 7
    YANLIS           shift, and go to state 8
    FONKSIYON        shift, and go to state 9
    DONDUR           shift, and go to state 10
    EKRANA_YAZ       shift, and go to state 11
    DEGER_GOSTER     shift, and go to state 12
    EKRANI_TEMIZLE   shift, and go to state 13
    RENK_AYARLA      shift, and go to state 14
    KALINLIK_AYARLA  shift, and go to state 15
    DIKDORTGEN_CIZ   shift, and go to state 16
    DAIRE_CIZ        shift, and go to state 17
    UCGEN_CIZ        shift, and go to state 18
    DOLDUR           shift, and go to state 19
    GUNCELLE         shift, and go to state 20
    "değil"          shift, and go to state 21
    '-'              shift, and go to state 22
    '('              shift, and go to state 23

    $default  reduce using rule 1 (program)

    ifade              go to state 68
    deyim              go to state 27
    atama_deyimi       go to state 28
    dongu_deyimi       go to state 29
    kosul_deyimi       go to state 30
    fonksiyon_tanimi   go to state 31
    dondur_deyimi      go to state 32
    fonksiyon_cagrisi  go to state 33
    komut              go to state 34
    mantiksal_ifade    go to state 35
    aritmetik_ifade    go to state 36
    terim              go to state 37
    faktor             go to state 38
    unary_ifade        go to state 39
    literal            go to state 40


State 26

    2 ifadeler: ifade •

    $default  reduce using rule 2 (ifadeler)


State 27

    4 ifade: deyim •

    $default  reduce using rule 4 (ifade)


State 28

    9 deyim: atama_deyimi •

    $default  reduce using rule 9 (deyim)


State 29

   10 deyim: dongu_deyimi •

    $default  reduce using rule 10 (deyim)


State 30

   11 deyim: kosul_deyimi •

    $default  reduce using rule 11 (deyim)


State 31

   12 deyim: fonksiyon_tanimi •

    $default  reduce using rule 12 (deyim)


State 32

   13 deyim: dondur_deyimi •

    $default  reduce using rule 13 (deyim)


State 33

   15 deyim: fonksiyon_cagrisi •
   62 faktor: fonksiyon_cagrisi •

    $end             reduce using rule 15 (deyim)
    $end             [reduce using rule 62 (faktor)]
    TAMSAYI          reduce using rule 15 (deyim)
    TAMSAYI          [reduce using rule 62 (faktor)]
    ONDALIK          reduce using rule 15 (deyim)
    ONDALIK          [reduce using rule 62 (faktor)]
    METIN            reduce using rule 15 (deyim)
    METIN            [reduce using rule 62 (faktor)]
    TANIMLAYICI      reduce using rule 15 (deyim)
    TANIMLAYICI      [reduce using rule 62 (faktor)]
    EGER             reduce using rule 15 (deyim)
    EGER             [reduce using rule 62 (faktor)]
    DEGILSE          reduce using rule 15 (deyim)
    DEGILSE          [reduce using rule 62 (faktor)]
    IKEN             reduce using rule 15 (deyim)
    IKEN             [reduce using rule 62 (faktor)]
    SON              reduce using rule 15 (deyim)
    SON              [reduce using rule 62 (faktor)]
    DOGRU            reduce using rule 15 (deyim)
    DOGRU            [reduce using rule 62 (faktor)]
    YANLIS           reduce using rule 15 (deyim)
    YANLIS           [reduce using rule 62 (faktor)]
    FONKSIYON        reduce using rule 15 (deyim)
    FONKSIYON        [reduce using rule 62 (faktor)]
    DONDUR           reduce using rule 15 (deyim)
    DONDUR           [reduce using rule 62 (faktor)]
    EKRANA_YAZ       reduce using rule 15 (deyim)
    EKRANA_YAZ       [reduce using rule 62 (faktor)]
    DEGER_GOSTER     reduce using rule 15 (deyim)
    DEGER_GOSTER     [reduce using rule 62 (faktor)]
    EKRANI_TEMIZLE   reduce using rule 15 (deyim)
    EKRANI_TEMIZLE   [reduce using rule 62 (faktor)]
    RENK_AYARLA      reduce using rule 15 (deyim)
    RENK_AYARLA      [reduce using rule 62 (faktor)]
    KALINLIK_AYARLA  reduce using rule 15 (deyim)
    KALINLIK_AYARLA  [reduce using rule 62 (faktor)]
    DIKDORTGEN_CIZ   reduce using rule 15 (deyim)
    DIKDORTGEN_CIZ   [reduce using rule 62 (faktor)]
    DAIRE_CIZ        reduce using rule 15 (deyim)
    DAIRE_CIZ        [reduce using rule 62 (faktor)]
    UCGEN_CIZ        reduce using rule 15 (deyim)
    UCGEN_CIZ        [reduce using rule 62 (faktor)]
    DOLDUR           reduce using rule 15 (deyim)
    DOLDUR           [reduce using rule 62 (faktor)]
    GUNCELLE         reduce using rule 15 (deyim)
    GUNCELLE         [reduce using rule 62 (faktor)]
    "değil"          reduce using rule 15 (deyim)
    "değil"          [reduce using rule 62 (faktor)]
    "=="             reduce using rule 62 (faktor)
    "!="             reduce using rule 62 (faktor)
    "<"              reduce using rule 62 (faktor)
    ">"              reduce using rule 62 (faktor)
    "<="             reduce using rule 62 (faktor)
    ">="             reduce using rule 62 (faktor)
    '+'              reduce using rule 62 (faktor)
    '-'              reduce using rule 15 (deyim)
    '-'              [reduce using rule 62 (faktor)]
    '*'              reduce using rule 62 (faktor)
    '/'              reduce using rule 62 (faktor)
    '%'              reduce using rule 62 (faktor)
    '}'              reduce using rule 15 (deyim)
    '}'              [reduce using rule 62 (faktor)]
    '('              reduce using rule 15 (deyim)
    '('              [reduce using rule 62 (faktor)]
    ')'              reduce using rule 15 (deyim)
    ')'              [reduce using rule 62 (faktor)]
    ','              reduce using rule 15 (deyim)
    ','              [reduce using rule 62 (faktor)]
    $default         reduce using rule 15 (deyim)

    reduce/reduce conflict on tokens $end, TAMSAYI, ONDALIK, METIN, TANIMLAYICI, EGER, DEGILSE, IKEN, SON, DOGRU, YANLIS, FONKSIYON, DONDUR, EKRANA_YAZ, DEGER_GOSTER, EKRANI_TEMIZLE, RENK_AYARLA, KALINLIK_AYARLA, DIKDORTGEN_CIZ, DAIRE_CIZ, UCGEN_CIZ, DOLDUR, GUNCELLE, "değil", '-', '}', '(', ')', ',':
       15 deyim: fonksiyon_cagrisi •
       62 faktor: fonksiyon_cagrisi •
      Example: fonksiyon_cagrisi •
      First reduce derivation
        ifade
        ↳ 4: deyim
             ↳ 15: fonksiyon_cagrisi •
      Second reduce derivation
        ifade
        ↳ 5: aritmetik_ifade
             ↳ 53: terim
                   ↳ 56: faktor
                         ↳ 62: fonksiyon_cagrisi •



State 34

   14 deyim: komut •

    $default  reduce using rule 14 (deyim)


State 35

    6 ifade: mantiksal_ifade •
   47 mantiksal_ifade: mantiksal_ifade • "ve" mantiksal_ifade
   48                | mantiksal_ifade • "veya" mantiksal_ifade

    "ve"    shift, and go to state 69
    "veya"  shift, and go to state 70

    $default  reduce using rule 6 (ifade)


State 36

    5 ifade: aritmetik_ifade •
   41 mantiksal_ifade: aritmetik_ifade • "==" aritmetik_ifade
   42                | aritmetik_ifade • "!=" aritmetik_ifade
   43                | aritmetik_ifade • "<" aritmetik_ifade
   44                | aritmetik_ifade • ">" aritmetik_ifade
   45                | aritmetik_ifade • "<=" aritmetik_ifade
   46                | aritmetik_ifade • ">=" aritmetik_ifade
   54 aritmetik_ifade: aritmetik_ifade • '+' terim
   55                | aritmetik_ifade • '-' terim

    "=="  shift, and go to state 71
    "!="  shift, and go to state 72
    "<"   shift, and go to state 73
    ">"   shift, and go to state 74
    "<="  shift, and go to state 75
    ">="  shift, and go to state 76
    '+'   shift, and go to state 77
    '-'   shift, and go to state 78

    '-'       [reduce using rule 5 (ifade)]
    $default  reduce using rule 5 (ifade)

    shift/reduce conflict on token '-':
        5 ifade: aritmetik_ifade •
       55 aritmetik_ifade: aritmetik_ifade • '-' terim
      Example: aritmetik_ifade • '-' unary_ifade
      Shift derivation
        ifadeler
        ↳ 2: ifade
             ↳ 5: aritmetik_ifade
                  ↳ 55: aritmetik_ifade • terim
                                          ↳ 56: faktor
                                                ↳ 60: '-' unary_ifade
      Reduce derivation
        ifadeler
        ↳ 3: ifadeler                    ifade
             ↳ 2: ifade                  ↳ 5: aritmetik_ifade
                  ↳ 5: aritmetik_ifade •      ↳ 53: terim
                                                    ↳ 56: faktor
                                                          ↳ 60: unary_ifade
                                                                ↳ 65: '-' unary_ifade



State 37

   53 aritmetik_ifade: terim •
   57 terim: terim • '*' faktor
   58      | terim • '/' faktor
   59      | terim • '%' faktor

    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    '%'  shift, and go to state 81

    $default  reduce using rule 53 (aritmetik_ifade)


State 38

   56 terim: faktor •

    $default  reduce using rule 56 (terim)


State 39

   60 faktor: unary_ifade •

    $default  reduce using rule 60 (faktor)


State 40

   63 unary_ifade: literal •

    $default  reduce using rule 63 (unary_ifade)


State 41

   16 atama_deyimi: TANIMLAYICI "←" • ifade
